--- a/GerenciamentoVendas/Properties/launchSettings.json
+++ b/GerenciamentoVendas/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/Usuario/Index",
+      "launchUrl": "api/Usuario/Usuarios",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "GerenciamentoVendas": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/Usuario/Index",
+      "launchUrl": "api/Usuario/Usuarios",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
