--- a/GerenciamentoVendas/GerenciamentoVendas.csproj
+++ b/GerenciamentoVendas/GerenciamentoVendas.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="MySql.Data" Version="8.0.30" />
     <PackageReference Include="Nancy" Version="2.0.0" />
+    <PackageReference Include="xunit" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
